# home

./: .gitignore  README.md
.zed/: settings.json
home/: Cargo.toml  libcore.rlib
home/examples/: inspect_neodisk.rs  streaming_example.rs  verify_compact.rs
home/src/: core.rs  covering.rs  exocore.rs  isocore.rs  isopack.rs  jumpheader.rs  key.rs  lib.rs  main.rs  markup.rs  neocore.rs  neodisk.rs  store.rs
home/src/neopack/: README.txt  cursor.rs  decoder.rs  decoder_old.rs  encoder.rs  macros.rs  mod.rs  tests.rs  types.rs
